--- a/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.controllers.PlanItMainWindowController" />
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.example.gui.controllers.PlanItMainWindowController"
+            prefHeight="600.0" prefWidth="600.0">
+
+</AnchorPane>
