--- a/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
@@ -4,13 +4,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="630.0" prefWidth="1213.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.controllers.PlanItMainWindowController">
+<AnchorPane prefHeight="630.0" prefWidth="1213.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ScrollPane layoutX="231.0" layoutY="-2.0" prefHeight="630.0" prefWidth="770.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="214.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="0.0">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="630.0" prefWidth="770.0">
                <children>
-                  <GridPane layoutX="-2.0" layoutY="80.0" prefHeight="630.0" prefWidth="770.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <GridPane fx:id="calendar" layoutX="-2.0" layoutY="80.0" prefHeight="630.0" prefWidth="770.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -92,11 +92,11 @@
                               </Label>
                            </children>
                         </Pane>
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1" />
+                        <VBox prefHeight="108.0" prefWidth="110.0" GridPane.rowIndex="1" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="1" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2" />
@@ -120,37 +120,42 @@
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="4" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
                         <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
                </children></AnchorPane>
         </content>
       </ScrollPane>
-      <Button mnemonicParsing="false" style="-fx-background-color: transparent;" text="+ Pridaj udalosť">
+      <Button fx:id="addEventButton" mnemonicParsing="false" style="-fx-background-color: transparent;" text="+ Pridaj udalosť">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Label fx:id="yearLabel" layoutX="1087.0" layoutY="39.0" text="2020" AnchorPane.leftAnchor="1087.0" AnchorPane.rightAnchor="86.79999999999995">
+      <Label fx:id="yearLabel" layoutX="1087.0" layoutY="93.0" text="2020" AnchorPane.leftAnchor="1087.0" AnchorPane.rightAnchor="86.79999999999995">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="yearBack" layoutX="1036.0" layoutY="29.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="42.0" style="-fx-background-color: transparent;" text="&lt;">
+      <Button fx:id="yearBack" layoutX="1038.0" layoutY="83.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="42.0" style="-fx-background-color: transparent;" text="&lt;">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button fx:id="yearForward" layoutX="1136.0" layoutY="30.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="&gt;">
+      <Button fx:id="yearForward" layoutX="1135.0" layoutY="84.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="&gt;">
          <font>
             <Font size="20.0" />
          </font></Button>
-      <ListView fx:id="months" layoutX="1001.0" layoutY="82.0" prefHeight="383.0" prefWidth="214.0" />
+      <ListView fx:id="monthsList" layoutX="1020.0" layoutY="140.0" prefHeight="279.0" prefWidth="174.0" />
+      <Label fx:id="monthLabel" layoutX="1079.0" layoutY="39.0" text="April">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
