--- a/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
@@ -14,7 +14,7 @@
       </Label>
       <Label layoutX="210.0" layoutY="192.0" text="Zadajte svoje ID:" />
       <TextField fx:id="textfieldId" layoutX="343.0" layoutY="187.0" />
-      <Button fx:id="buttonLogin" layoutX="307.0" layoutY="243.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="21.0" prefWidth="124.0" text="Prihlásiť" />
-      <Button fx:id="buttonRegister" layoutX="307.0" layoutY="284.0" mnemonicParsing="false" onAction="#handleRegister" prefHeight="31.0" prefWidth="124.0" text="Registrovať" />
+      <Button fx:id="buttonLogin" layoutX="307.0" layoutY="243.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="124.0" text="Prihlásiť" />
+      <Button fx:id="buttonRegister" layoutX="307.0" layoutY="284.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Registrovať" />
    </children>
 </AnchorPane>
