--- a/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
@@ -4,60 +4,65 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="590.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label layoutX="72.0" layoutY="50.0" text="Názov:">
+        <Label layoutX="65.0" layoutY="31.0" text="Názov:">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="70.0" layoutY="136.0" text="Miesto:">
+        <Label layoutX="64.0" layoutY="122.0" text="Miesto:">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="70.0" layoutY="170.0" text="Dátum:">
+        <Label layoutX="63.0" layoutY="169.0" text="Dátum:">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="72.0" layoutY="204.0" text="Začiatok:">
+        <Label layoutX="64.0" layoutY="215.0" text="Začiatok:">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="70.0" layoutY="239.0" text="Koniec:">
+        <Label layoutX="64.0" layoutY="260.0" text="Koniec:">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Label layoutX="69.0" layoutY="274.0" text="Upozornenie:">
+        <Label layoutX="64.0" layoutY="309.0" text="Upozornenie:">
             <font>
                 <Font size="16.0" />
             </font>
         </Label>
-        <Button fx:id="saveButton" layoutX="309.0" layoutY="496.0" mnemonicParsing="false" text="Uložiť">
+        <Button fx:id="saveButton" layoutX="308.0" layoutY="543.0" mnemonicParsing="false" text="Uložiť">
             <font>
                 <Font size="14.0" />
             </font>
         </Button>
-      <Label layoutX="69.0" layoutY="309.0" text="Popis:">
+      <Label layoutX="63.0" layoutY="355.0" text="Popis:">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="219.0" layoutY="309.0" prefHeight="167.0" prefWidth="443.0" />
-      <TextField fx:id="alertsField" layoutX="250.0" layoutY="274.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="335.8" />
-      <TextField fx:id="endsField" layoutX="249.0" layoutY="239.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="335.8" />
-      <TextField fx:id="startsField" layoutX="249.0" layoutY="203.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="335.8" />
-      <DatePicker fx:id="dateField" layoutX="218.0" layoutY="170.0" prefHeight="26.0" prefWidth="178.0" />
-      <TextField fx:id="locationField" layoutX="219.0" layoutY="136.0" prefHeight="26.0" prefWidth="443.0" />
-      <TextField fx:id="titleField" layoutX="218.0" layoutY="50.0" prefHeight="70.0" prefWidth="443.0" />
-      <Button fx:id="startsDecrement" layoutX="218.0" layoutY="203.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
-      <Button fx:id="startsIncrement" layoutX="370.0" layoutY="203.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="306.0" />
-      <Button fx:id="endsDecrement" layoutX="218.0" layoutY="238.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
-      <Button fx:id="endsIncrement" layoutX="370.0" layoutY="239.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="306.0" />
-      <Button fx:id="alertsDecrement" layoutX="218.0" layoutY="273.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
-      <Button fx:id="alertsIncrement" layoutX="370.0" layoutY="274.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" />
+      <TextField fx:id="descriptionField" layoutX="219.0" layoutY="355.0" prefHeight="167.0" prefWidth="443.0" />
+      <TextField fx:id="alertsField" layoutX="248.0" layoutY="308.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="336.8" />
+      <TextField fx:id="endsField" layoutX="248.0" layoutY="260.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="336.8" />
+      <TextField fx:id="startsField" layoutX="248.0" layoutY="215.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="336.8" />
+      <DatePicker fx:id="dateField" layoutX="219.0" layoutY="169.0" prefHeight="26.0" prefWidth="178.0" />
+      <TextField fx:id="locationField" layoutX="219.0" layoutY="122.0" prefHeight="26.0" prefWidth="443.0" />
+      <TextField fx:id="titleField" layoutX="219.0" layoutY="31.0" prefHeight="70.0" prefWidth="443.0" />
+      <Button fx:id="startsDecrement" layoutX="218.0" layoutY="215.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
+      <Button fx:id="startsIncrement" layoutX="370.0" layoutY="215.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="306.0" />
+      <Button fx:id="endsDecrement" layoutX="218.0" layoutY="260.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
+      <Button fx:id="endsIncrement" layoutX="370.0" layoutY="260.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="306.0" />
+      <Button fx:id="alertsDecrement" layoutX="218.0" layoutY="309.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
+      <Button fx:id="alertsIncrement" layoutX="370.0" layoutY="308.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" />
+      <Label fx:id="dateError" layoutX="218.0" layoutY="195.0" text="Zadajte dátum" textFill="RED" visible="false" />
+      <Label fx:id="startsError" layoutX="218.0" layoutY="241.0" text="Zadajte začiatok" textFill="RED" visible="false" />
+      <Label fx:id="endsError" layoutX="218.0" layoutY="289.0" text="Zadajte koniec" textFill="RED" visible="false" />
+      <Label fx:id="alertsError" layoutX="218.0" layoutY="334.0" text="Zadajte čas upozornenia" textFill="RED" visible="false" />
+      <Label fx:id="titleError" layoutX="218.0" layoutY="101.0" text="Zadajte názov" textFill="RED" visible="false" />
     </children>
 </AnchorPane>
