--- a/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItAddEvent.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="590.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="590.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Label layoutX="65.0" layoutY="31.0" text="Názov:">
             <font>
@@ -46,13 +46,11 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="descriptionField" layoutX="219.0" layoutY="355.0" prefHeight="167.0" prefWidth="443.0" />
       <TextField fx:id="alertsField" layoutX="248.0" layoutY="308.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="336.8" />
       <TextField fx:id="endsField" layoutX="248.0" layoutY="260.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="336.8" />
       <TextField fx:id="startsField" layoutX="248.0" layoutY="215.0" prefHeight="26.0" prefWidth="119.0" AnchorPane.leftAnchor="248.0" AnchorPane.rightAnchor="336.8" />
       <DatePicker fx:id="dateField" layoutX="219.0" layoutY="169.0" prefHeight="26.0" prefWidth="178.0" />
       <TextField fx:id="locationField" layoutX="219.0" layoutY="122.0" prefHeight="26.0" prefWidth="443.0" />
-      <TextField fx:id="titleField" layoutX="219.0" layoutY="31.0" prefHeight="70.0" prefWidth="443.0" />
       <Button fx:id="startsDecrement" layoutX="218.0" layoutY="215.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
       <Button fx:id="startsIncrement" layoutX="370.0" layoutY="215.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="+" AnchorPane.rightAnchor="306.0" />
       <Button fx:id="endsDecrement" layoutX="218.0" layoutY="260.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="-" AnchorPane.leftAnchor="218.0" />
@@ -64,5 +62,7 @@
       <Label fx:id="endsError" layoutX="218.0" layoutY="289.0" text="Zadajte koniec" textFill="RED" visible="false" />
       <Label fx:id="alertsError" layoutX="218.0" layoutY="334.0" text="Zadajte čas upozornenia" textFill="RED" visible="false" />
       <Label fx:id="titleError" layoutX="218.0" layoutY="101.0" text="Zadajte názov" textFill="RED" visible="false" />
+      <TextArea fx:id="titleField" layoutX="219.0" layoutY="31.0" prefHeight="70.0" prefWidth="443.0" />
+      <TextArea fx:id="descriptionField" layoutX="219.0" layoutY="355.0" prefHeight="167.0" prefWidth="443.0" />
     </children>
 </AnchorPane>
