--- a/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
@@ -12,9 +12,11 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="210.0" layoutY="192.0" text="Zadajte svoje ID:" />
-      <TextField fx:id="textfieldId" layoutX="343.0" layoutY="187.0" />
-      <Button fx:id="buttonLogin" layoutX="307.0" layoutY="243.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="124.0" text="Prihlásiť" />
-      <Button fx:id="buttonRegister" layoutX="307.0" layoutY="284.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Registrovať" />
+      <Label layoutX="207.0" layoutY="159.0" text="Zadajte meno:" />
+      <TextField fx:id="textfieldName" layoutX="343.0" layoutY="155.0" />
+      <Button fx:id="buttonLogin" layoutX="307.0" layoutY="259.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Prihlásiť" />
+      <Button fx:id="buttonRegister" layoutX="307.0" layoutY="297.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Registrovať" />
+      <PasswordField fx:id="passwordfieldPassword" layoutX="343.0" layoutY="197.0" />
+      <Label layoutX="207.0" layoutY="201.0" text="Zadajte heslo:" />
    </children>
 </AnchorPane>
