--- a/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
@@ -4,13 +4,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="ap" prefHeight="630.0" prefWidth="1213.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ap" prefHeight="664.0" prefWidth="1213.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ScrollPane layoutX="231.0" layoutY="-2.0" prefHeight="630.0" prefWidth="770.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="214.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="0.0">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="630.0" prefWidth="770.0">
                <children>
-                  <GridPane fx:id="calendar" layoutX="-2.0" layoutY="80.0" prefHeight="630.0" prefWidth="770.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <GridPane fx:id="calendar" layoutX="-2.0" layoutY="80.0" prefHeight="630.0" prefWidth="770.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-15.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -132,7 +132,7 @@
                </children></AnchorPane>
         </content>
       </ScrollPane>
-      <Button fx:id="addEventButton" mnemonicParsing="false" style="-fx-background-color: transparent;" text="+ Pridaj udalosť">
+      <Button fx:id="addEventButton" layoutX="31.0" layoutY="20.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="+ Pridaj udalosť">
          <font>
             <Font size="18.0" />
          </font>
@@ -157,5 +157,6 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
+      <ChoiceBox fx:id="languageSelector" layoutX="32.0" layoutY="615.0" prefHeight="35.0" prefWidth="150.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="32.0" AnchorPane.rightAnchor="1031.0" AnchorPane.topAnchor="615.0" />
    </children>
 </AnchorPane>
