--- a/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="419.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="419.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="283.0" layoutY="69.0" text="Prihlásenie">
+      <Label layoutX="283.0" layoutY="69.0" text="%loginLabel">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="207.0" layoutY="159.0" text="Zadajte meno:" />
+      <Label layoutX="207.0" layoutY="159.0" text="%detailsLabel" />
       <TextField fx:id="textfieldName" layoutX="343.0" layoutY="155.0" />
-      <Button fx:id="buttonLogin" layoutX="307.0" layoutY="259.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Prihlásiť" />
-      <Button fx:id="buttonRegister" layoutX="307.0" layoutY="297.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Registrovať" />
+      <Button fx:id="buttonLogin" layoutX="307.0" layoutY="259.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="%loginButton" />
+      <Button fx:id="buttonRegister" layoutX="307.0" layoutY="297.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="%registerButton" />
       <PasswordField fx:id="passwordfieldPassword" layoutX="343.0" layoutY="197.0" />
-      <Label layoutX="207.0" layoutY="201.0" text="Zadajte heslo:" />
+      <Label layoutX="207.0" layoutY="201.0" text="%passwordLabel" />
+      <Button fx:id="changeLanguageButton" layoutX="307.0" layoutY="366.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Zmeniť jazyk" />
    </children>
 </AnchorPane>
