--- a/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
@@ -11,12 +11,12 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="207.0" layoutY="159.0" text="%detailsLabel" />
+      <Label layoutX="207.0" layoutY="159.0" text="%usernameLabel" />
       <TextField fx:id="textfieldName" layoutX="343.0" layoutY="155.0" />
       <Button fx:id="buttonLogin" layoutX="307.0" layoutY="259.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="%loginButton" />
       <Button fx:id="buttonRegister" layoutX="307.0" layoutY="297.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="%registerButton" />
       <PasswordField fx:id="passwordfieldPassword" layoutX="343.0" layoutY="197.0" />
       <Label layoutX="207.0" layoutY="201.0" text="%passwordLabel" />
-      <Button fx:id="changeLanguageButton" layoutX="307.0" layoutY="366.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Zmeniť jazyk" />
+      <Button fx:id="changeLanguageButton" layoutX="286.0" layoutY="366.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="165.0" text="%changeLanguageButton" />
    </children>
 </AnchorPane>
