--- a/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItLogin.fxml
@@ -4,19 +4,25 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="419.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ap" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="391.0" prefWidth="496.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="283.0" layoutY="69.0" text="%loginLabel">
+      <Label layoutX="156.0" layoutY="45.0" text="%loginLabel">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="207.0" layoutY="159.0" text="%usernameLabel" />
-      <TextField fx:id="textfieldName" layoutX="343.0" layoutY="155.0" />
-      <Button fx:id="buttonLogin" layoutX="307.0" layoutY="259.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="%loginButton" />
-      <Button fx:id="buttonRegister" layoutX="307.0" layoutY="297.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="%registerButton" />
-      <PasswordField fx:id="passwordfieldPassword" layoutX="343.0" layoutY="197.0" />
-      <Label layoutX="207.0" layoutY="201.0" text="%passwordLabel" />
-      <Button fx:id="changeLanguageButton" layoutX="286.0" layoutY="366.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="165.0" text="%changeLanguageButton" />
+      <Label layoutX="107.0" layoutY="135.0" text="%usernameLabel">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <TextField fx:id="textfieldName" layoutX="216.0" layoutY="131.0" />
+      <Button fx:id="buttonLogin" layoutX="180.0" layoutY="228.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" styleClass="control-button" text="%loginButton" />
+      <Button fx:id="buttonRegister" layoutX="180.0" layoutY="269.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" styleClass="control-button" text="%registerButton" />
+      <PasswordField fx:id="passwordfieldPassword" layoutX="216.0" layoutY="173.0" />
+      <Label layoutX="108.0" layoutY="177.0" text="%passwordLabel">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
+      <Button fx:id="changeLanguageButton" layoutX="171.0" layoutY="336.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="142.0" styleClass="control-button" text="%changeLanguageButton" />
    </children>
 </AnchorPane>
