--- a/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
@@ -4,33 +4,33 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="ap" prefHeight="682.0" prefWidth="1213.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="ap" prefHeight="682.0" prefWidth="1213.0" styleClass="ap" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ScrollPane layoutX="231.0" layoutY="-2.0" prefHeight="630.0" prefWidth="770.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="214.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="0.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="630.0" prefWidth="770.0">
+      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="231.0" layoutY="-2.0" prefHeight="682.0" prefWidth="785.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="214.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="630.0" prefWidth="770.0">
                <children>
-                  <GridPane fx:id="calendar" layoutX="-2.0" layoutY="80.0" prefHeight="682.0" prefWidth="785.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="-52.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-15.0" AnchorPane.topAnchor="0.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <GridPane fx:id="calendar" layoutX="-2.0" layoutY="80.0" prefHeight="682.0" prefWidth="785.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="-52.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
+                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="ALWAYS" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
-                    </rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                     </rowConstraints>
                      <children>
-                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2ed2d2;">
+                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #008385;">
                            <children>
                               <Label fx:id="mondayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="24.0" prefHeight="40.0" prefWidth="112.0" text="%mondayLabel" textFill="WHITE">
                                  <font>
@@ -39,7 +39,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2ed2d2#2ed2d2;" GridPane.columnIndex="1">
+                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #008385#008385;" GridPane.columnIndex="1">
                            <children>
                               <Label fx:id="tuesdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="24.0" prefHeight="40.0" prefWidth="113.0" text="%tuesdayLabel" textFill="WHITE">
                                  <font>
@@ -48,7 +48,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2ed2d2;" GridPane.columnIndex="2">
+                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #008385;" GridPane.columnIndex="2">
                            <children>
                               <Label fx:id="wednesdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="24.0" prefHeight="40.0" prefWidth="114.0" text="%wednesdayLabel" textFill="WHITE">
                                  <font>
@@ -57,7 +57,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2ed2d2;" GridPane.columnIndex="3">
+                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #008385;" GridPane.columnIndex="3">
                            <children>
                               <Label fx:id="thursdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="113.0" text="%thursdayLabel" textFill="WHITE">
                                  <font>
@@ -66,7 +66,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2ed2d2;" GridPane.columnIndex="4">
+                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #008385;" GridPane.columnIndex="4">
                            <children>
                               <Label fx:id="fridayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="112.0" text="%fridayLabel" textFill="WHITE">
                                  <font>
@@ -75,7 +75,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2ed2d2;" GridPane.columnIndex="5">
+                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #008385;" GridPane.columnIndex="5">
                            <children>
                               <Label fx:id="saturdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="25.0" prefHeight="38.0" prefWidth="111.0" text="%saturdayLabel" textFill="WHITE">
                                  <font>
@@ -84,7 +84,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2ed2d2;" GridPane.columnIndex="6">
+                        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #008385;" GridPane.columnIndex="6">
                            <children>
                               <Label fx:id="sundayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="113.0" text="%sundayLabel" textFill="WHITE">
                                  <font>
@@ -138,13 +138,8 @@
                      </children>
                   </GridPane>
                </children></AnchorPane>
-        </content>
+         </content>
       </ScrollPane>
-      <Button fx:id="addEventButton" alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="20.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="217.0" style="-fx-background-color: transparent;" text="%addEventButton" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="997.0">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
       <Label fx:id="yearLabel" layoutX="1087.0" layoutY="93.0" text="2020" AnchorPane.leftAnchor="1087.0" AnchorPane.rightAnchor="86.79999999999995">
          <font>
             <Font size="18.0" />
@@ -165,12 +160,17 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="changeLanguageButton" alignment="CENTER" contentDisplay="CENTER" layoutY="606.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="217.0" style="-fx-background-color: transparent;" text="%changeLanguageButton" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="996.0">
+      <Button fx:id="addEventButton" alignment="CENTER" contentDisplay="CENTER" layoutX="7.0" layoutY="86.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" styleClass="control-button" text="%addEventButton" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="1007.0">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button fx:id="savePdfButton" alignment="CENTER" contentDisplay="CENTER" layoutY="535.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="217.0" style="-fx-background-color: transparent;" text="%exportPdfButton">
+      <Button fx:id="changeLanguageButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="606.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" styleClass="control-button" text="%changeLanguageButton" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="1008.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="savePdfButton" alignment="CENTER" contentDisplay="CENTER" layoutX="7.0" layoutY="535.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" styleClass="control-button" text="%exportPdfButton">
          <font>
             <Font size="18.0" />
          </font></Button>
