--- a/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
+++ b/ClientProject/Gui/src/main/resources/fxml/PlanItMainWindow.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane fx:id="ap" prefHeight="683.0" prefWidth="1213.0" styleClass="ap" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="231.0" layoutY="-2.0" prefHeight="682.0" prefWidth="785.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="214.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" layoutX="231.0" layoutY="-2.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="214.0" AnchorPane.rightAnchor="214.0" AnchorPane.topAnchor="0.0">
          <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="683.0" prefWidth="770.0">
+            <AnchorPane>
                <children>
-                  <GridPane fx:id="calendar" layoutX="-2.0" layoutY="80.0" prefHeight="682.0" prefWidth="770.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
+                  <GridPane fx:id="calendar" layoutX="-2.0" layoutY="80.0" style="-fx-grid-lines-visible: true;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -21,16 +22,16 @@
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints vgrow="ALWAYS" />
-                        <RowConstraints vgrow="ALWAYS" />
-                        <RowConstraints vgrow="ALWAYS" />
-                        <RowConstraints vgrow="ALWAYS" />
-                        <RowConstraints vgrow="ALWAYS" />
-                        <RowConstraints vgrow="ALWAYS" />
-                        <RowConstraints vgrow="ALWAYS" />
+                        <RowConstraints minHeight="80.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="100.0" vgrow="ALWAYS" />
                      </rowConstraints>
                      <children>
-                        <Pane prefHeight="200.0" prefWidth="200.0" styleClass="weekday-header">
+                        <Pane styleClass="weekday-header">
                            <children>
                               <Label fx:id="mondayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="24.0" prefHeight="40.0" prefWidth="112.0" text="%mondayLabel" textFill="WHITE">
                                  <font>
@@ -39,7 +40,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" styleClass="weekday-header" GridPane.columnIndex="1">
+                        <Pane styleClass="weekday-header" GridPane.columnIndex="1">
                            <children>
                               <Label fx:id="tuesdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="24.0" prefHeight="40.0" prefWidth="113.0" text="%tuesdayLabel" textFill="WHITE">
                                  <font>
@@ -48,7 +49,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" styleClass="weekday-header" GridPane.columnIndex="2">
+                        <Pane styleClass="weekday-header" GridPane.columnIndex="2">
                            <children>
                               <Label fx:id="wednesdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="24.0" prefHeight="40.0" prefWidth="114.0" text="%wednesdayLabel" textFill="WHITE">
                                  <font>
@@ -57,7 +58,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" styleClass="weekday-header" GridPane.columnIndex="3">
+                        <Pane styleClass="weekday-header" GridPane.columnIndex="3">
                            <children>
                               <Label fx:id="thursdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="113.0" text="%thursdayLabel" textFill="WHITE">
                                  <font>
@@ -66,7 +67,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" styleClass="weekday-header" GridPane.columnIndex="4">
+                        <Pane styleClass="weekday-header" GridPane.columnIndex="4">
                            <children>
                               <Label fx:id="fridayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="112.0" text="%fridayLabel" textFill="WHITE">
                                  <font>
@@ -75,7 +76,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" styleClass="weekday-header" GridPane.columnIndex="5">
+                        <Pane styleClass="weekday-header" GridPane.columnIndex="5">
                            <children>
                               <Label fx:id="saturdayLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="25.0" prefHeight="38.0" prefWidth="111.0" text="%saturdayLabel" textFill="WHITE">
                                  <font>
@@ -84,7 +85,7 @@
                               </Label>
                            </children>
                         </Pane>
-                        <Pane prefHeight="200.0" prefWidth="200.0" styleClass="weekday-header" GridPane.columnIndex="6">
+                        <Pane styleClass="weekday-header" GridPane.columnIndex="6">
                            <children>
                               <Label fx:id="sundayLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="24.0" prefHeight="40.0" prefWidth="113.0" text="%sundayLabel" textFill="WHITE">
                                  <font>
@@ -93,48 +94,48 @@
                               </Label>
                            </children>
                         </Pane>
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="2" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="3" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="3" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="4" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="4" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-                        <VBox prefHeight="130.0" prefWidth="114.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="5" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="6" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowIndex="6" />
-                        <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+                        <VBox GridPane.rowIndex="1" />
+                        <VBox GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <VBox GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <VBox GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                        <VBox GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                        <VBox GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                        <VBox GridPane.columnIndex="6" GridPane.rowIndex="1" />
+                        <VBox GridPane.rowIndex="2" />
+                        <VBox GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <VBox GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <VBox GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                        <VBox GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                        <VBox GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                        <VBox GridPane.columnIndex="6" GridPane.rowIndex="2" />
+                        <VBox GridPane.rowIndex="3" />
+                        <VBox GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <VBox GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                        <VBox GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                        <VBox GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                        <VBox GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                        <VBox GridPane.columnIndex="6" GridPane.rowIndex="3" />
+                        <VBox GridPane.rowIndex="4" />
+                        <VBox GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <VBox GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                        <VBox GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                        <VBox GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                        <VBox GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                        <VBox GridPane.columnIndex="6" GridPane.rowIndex="4" />
+                        <VBox GridPane.columnIndex="6" GridPane.rowIndex="5" />
+                        <VBox GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                        <VBox GridPane.columnIndex="4" GridPane.rowIndex="5" />
+                        <VBox GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                        <VBox GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                        <VBox GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <VBox GridPane.rowIndex="5" />
+                        <VBox GridPane.rowIndex="6" />
+                        <VBox GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <VBox GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                        <VBox GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                        <VBox GridPane.columnIndex="4" GridPane.rowIndex="6" />
+                        <VBox GridPane.columnIndex="5" GridPane.rowIndex="6" />
+                        <VBox GridPane.columnIndex="6" GridPane.rowIndex="6" />
                      </children>
                   </GridPane>
                </children></AnchorPane>
@@ -160,24 +161,40 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="addEventButton" alignment="CENTER" contentDisplay="CENTER" layoutX="7.0" layoutY="86.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" styleClass="control-button" text="%addEventButton" AnchorPane.bottomAnchor="557.8" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="1007.0" AnchorPane.topAnchor="86.00000000000004">
+      <Button fx:id="addEventButton" alignment="CENTER" contentDisplay="CENTER" layoutX="7.0" layoutY="86.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" text="%addEventButton">
          <font>
             <Font size="18.0" />
          </font>
+         <styleClass>
+            <String fx:value="control-button" />
+            <String fx:value="menu-button" />
+         </styleClass>
       </Button>
-      <Button fx:id="changeLanguageButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="606.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" styleClass="control-button" text="%changeLanguageButton" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="1008.0">
+      <Button fx:id="changeLanguageButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="606.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" text="%changeLanguageButton">
          <font>
             <Font size="18.0" />
          </font>
+         <styleClass>
+            <String fx:value="control-button" />
+            <String fx:value="menu-button" />
+         </styleClass>
       </Button>
-      <Button fx:id="savePdfButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="140.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" styleClass="control-button" text="%exportPdfButton" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="1007.0">
-         <font>
-            <Font size="18.0" />
-         </font></Button>
-      <Button fx:id="logoutButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="556.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" styleClass="control-button" text="%logoutButton">
+      <Button fx:id="savePdfButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="140.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" text="%exportPdfButton">
          <font>
             <Font size="18.0" />
          </font>
+         <styleClass>
+            <String fx:value="control-button" />
+            <String fx:value="menu-button" />
+         </styleClass></Button>
+      <Button fx:id="logoutButton" alignment="CENTER" contentDisplay="CENTER" layoutX="6.0" layoutY="556.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="199.0" text="%logoutButton">
+         <font>
+            <Font size="18.0" />
+         </font>
+         <styleClass>
+            <String fx:value="control-button" />
+            <String fx:value="menu-button" />
+         </styleClass>
       </Button>
    </children>
 </AnchorPane>
